# fly-airship

./: .dockerignore  .envrc  Cargo.toml  Dockerfile  LICENSE  flake.nix  fly.toml  rust-toolchain.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: api.rs  db.rs  main.rs
shared/src/: lib.rs  req.rs
