[package]
name = "fly-airship-client"
version = "0.1.0"
edition = "2021"

[dependencies]
pnet = "0.35"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "json"] }
shared = { path = "../shared" }
