[package]
name = "fly-airship-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
warp = { version = "0.3", default-features = false }
shared = { path = "../shared" }
